<resources>
    <string name="app_name">TenX</string>
    <string name="my_name_is_">My name is Xenie. I am your intelligent store assistant.\n\nTap to get started.</string>
    <string name="welcome_to_">Welcome to 10X</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing.</string>
    <string name="shop_owner_">Shop owner name</string>
    <string name="didn_t_rece">Didn\'t receive the code? Resend now</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="enter_verif">Email OTP verification</string>
    <string name="otp_sent_to">OTP sent to saye*****.com</string>
    <string name="don_t_recei">Don\'t receive the OTP ? Resend OTP</string>
    <string name="upload_docu">Upload Documents</string>
    <string name="basic_detil">Basic Detail</string>
    <string name="name">Name</string>
    <string name="email_id">Email Id</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="get_otp">GET OTP</string>
    <string name="save_and_next">SAVE AND NEXT</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="by_signing_in_you_agree_to_our_terms_amp_policy"><![CDATA[By signing in you agree to our terms & policy.]]></string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="get_started">GET STARTED</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_have_sent_a_verification_code_to">We have sent a verification code to</string>
    <string name="next">NEXT</string>
    <string name="verify">VERIFY</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="max_size_12mb">Max size 12MB</string>
    <string name="click_photo">CLICK PHOTO</string>
    <string name="upload">UPLOAD</string>
    <string name="street_address">Street Address</string>
    <string name="pincode">Pincode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="pan_number">PAN Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="enter_16_digit_aadhaar_number">Enter 16 digit Aadhaar Number</string>
    <string name="enter_8_digit_pan_number">Enter 8 digit PAN Number</string>
    <string name="documents">Documents</string>
    <string name="document_type">Document Type</string>
    <string name="gst_certificate">GST Certificate</string>
    <string name="not_found">Not Found</string>
    <string name="pan_front">PAN - Front</string>
    <string name="pan_back">PAN - Back</string>
    <string name="owner_aadhar_card">Owner Aadhar card</string>
    <string name="go_to_step_2">GO TO STEP 2</string>
    <string name="complete_kyc">COMPLETE KYC</string>
    <string name="distributors">DISTRIBUTORS</string>
    <string name="sku_s">SKU’s</string>
    <string name="xenie">XENIE</string>
    <string name="finance">FINANCE</string>
    <string name="trade">TRADE</string>
</resources>