<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F7F7F7"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_close_dialog" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/enter_verif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:letterSpacing="0.02"
        android:lineSpacingExtra="2sp"
        android:padding="12dp"
        android:text="@string/upload_photo"
        android:textColor="#323139"
        android:textSize="16sp"
        android:translationY="-1.1sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/upload_prof"
                android:layout_width="185dp"
                android:layout_height="27dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="top"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="2sp"
                android:text="@string/upload_profile_photo"
                android:textColor="#525255"
                android:textSize="18sp"
                android:translationY="-1.24sp" />

            <TextView
                android:id="@+id/max_size_12"
                android:layout_width="102dp"
                android:layout_height="21dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="0.5dp"
                android:gravity="top"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="2sp"
                android:text="@string/max_size_12mb"
                android:textColor="#747378"
                android:textSize="16sp"
                android:translationY="-0.97sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/click_upload_bg"
                    android:text="@string/click_photo"
                    android:textColor="#7895DE" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/click_upload_bg"
                    android:text="@string/upload"
                    android:textColor="#7895DE" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>