<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#F7F7F7">

    <androidx.cardview.widget.CardView
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:cardCornerRadius="20dp"
        android:layout_gravity="center"
        >

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_close_dialog" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/enter_verif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:lineSpacingExtra="2sp"
        android:padding="12dp"
        android:text="@string/enter_verif"
        android:textAppearance="@style/enter_verif"
        android:translationY="-1.1sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F7F7F7"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/otp_sent_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:lineSpacingExtra="2sp"
            android:text="@string/otp_sent_to"
            android:textAppearance="@style/otp_sent_to"
            android:translationY="-1.1sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/editTextTextPersonName4"
                style="@style/CustomEmailOtpEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="XXXX"
                android:inputType="textPersonName"
                android:textColor="#747378"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName4"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
                app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName4"
                app:srcCompat="@drawable/ic_otp_verified" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/don_t_recei"
            android:layout_width="243dp"
            android:layout_height="21dp"
            android:layout_marginTop="12dp"
            android:gravity="top"
            android:lineSpacingExtra="2sp"
            android:text="@string/don_t_recei"
            android:textAppearance="@style/don_t_recei"
            android:translationY="-0.97sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/verify_otp_button_bg"
            android:text="VERIFY"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</LinearLayout>